# otel-agent

./: .gitignore  AGENTS.md  CONCEPTS.md  README.md  pyproject.toml  tasks.md
.compound-engineering/: config.local.example.yaml
.hermes/plans/: 2026-06-26_101256-llm-telemetry-proxy.md  2026-06-26_103245-multi-key-round-robin.md
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: hermes.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/dogfood-reports/: 2026-07-14-feat-ui-redesign-notion-blocks-dogfood.md
docs/ideation/: 2026-07-13-frontend-backend-separation-ideation.html  2026-07-14-auto-model-routing-ideation.html
docs/plans/: 2026-07-13-001-refactor-dashboard-fastapi-merge-plan.md  2026-07-13-002-feat-react-dashboard-migration-plan.md  2026-07-13-003-fix-remove-sse-from-dashboard-plan.md  2026-07-13-004-feat-llm-message-framework-rendering-plan.md  2026-07-13-005-feat-ui-redesign-notion-blocks-plan.md  2026-07-14-003-feat-auto-model-routing-plan.md  2026-07-15-001-feat-model-name-in-list-plan.md  2026-07-15-002-feat-provider-prefix-model-name-plan.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  router.tsx
specs/001-global-cli-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-path-based-routing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-background-proxy/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tests/: test_addon.py  test_auto_mode_integration.py  test_auto_router.py  test_breaker_cache.py  test_classifier.py  test_cli.py  test_config.py  test_converter.py  test_dashboard.py  test_integration.py  test_logger.py  test_message_parser.py  test_migration.py  test_models.py  test_process.py  test_proxy.py  test_render.py  test_rotator.py  test_router.py  test_server.py  test_usage_metrics.py  test_viewer.py
(+243 files in other folders)
