[project]
name = "otel-agent"
version = "0.1.0"
description = "LLM API telemetry proxy"
requires-python = ">=3.10"
dependencies = [
    "mitmproxy>=10.0",
]

[project.scripts]
otel-proxy = "otel_agent.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otel_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end integration tests (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "requests>=2.34.2",
]
