[project]
name = "otel-agent"
version = "0.1.0"
description = "LLM API gateway — OpenAI/Anthropic compatible endpoints with model-name-based provider routing and telemetry"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "xiaoquisme" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.3",
    "duckdb>=1.5.4",
    "markdown>=3.10.2",
    "bleach>=6.4.0",
]

[project.scripts]
otel-agent = "otel_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otel_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end integration tests (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "twine>=6.2.0",
]
